fix: enhance layout and scrollbar styles for better responsiveness; adjust body min-height and hide scrollbar by default

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,8 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+  height: 100%;
+  min-height: 100%;
+  overflow-y: auto;
+}
+
 body {
   font-family: Montserrat, sans-serif;
+  min-height: 100vh;
 }
 
 @layer utilities {
@@ -102,6 +109,7 @@ body {
 ::-webkit-scrollbar {
   width: 0px;
   height: 0px;
+  display: hidden; /* Hide scrollbar by default */
 }
 
 ::-webkit-scrollbar-track {
